added notebooks in ipynb format

--- a/notebook/DeltaChanges.ipynb
+++ b/notebook/DeltaChanges.ipynb
@@ -1,6 +1,20 @@
 {
   "nbformat": 4,
   "nbformat_minor": 2,
+  "metadata": {
+    "kernelspec": {
+      "name": "synapse_spark",
+      "display_name": "Synapse Spark"
+    },
+    "language_info": {
+      "name": "scala"
+    },
+    "save_output": true,
+    "synapse_widget": {
+      "version": "0.1",
+      "state": {}
+    }
+  },
   "cells": [
     {
       "cell_type": "code",
@@ -17,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "outputs": [],
       "metadata": {
         "jupyter": {
@@ -32,24 +46,24 @@
         "collapsed": true
       },
       "source": [
-        "// val changeDataSource = Seq(\n",
-        "//   ChangeData(\"a\", \"10\", deleted = false, time = 0),\n",
-        "//   ChangeData(\"a\", null, deleted = true, time = 1),   // a was updated and then deleted\n",
-        "//   ChangeData(\"b\", null, deleted = true, time = 2),   // b was just deleted once\n",
-        "//   ChangeData(\"c\", null, deleted = true, time = 3),   // c was deleted and then updated twice\n",
-        "//   ChangeData(\"c\", \"20\", deleted = false, time = 4),\n",
-        "//   ChangeData(\"c\", \"200\", deleted = false, time = 5)\n",
-        "// ).toDF().createOrReplaceTempView(\"changes\")\n",
+        "val changeDataSource = Seq(\n",
+        "  ChangeData(\"a\", \"10\", deleted = false, time = 0),\n",
+        "  ChangeData(\"a\", null, deleted = true, time = 1),   // a was updated and then deleted\n",
+        "  ChangeData(\"b\", null, deleted = true, time = 2),   // b was just deleted once\n",
+        "  ChangeData(\"c\", null, deleted = true, time = 3),   // c was deleted and then updated twice\n",
+        "  ChangeData(\"c\", \"20\", deleted = false, time = 4),\n",
+        "  ChangeData(\"c\", \"200\", deleted = false, time = 5)\n",
+        ").toDF().createOrReplaceTempView(\"changes\")\n",
         "\n",
         "// read from last checkpoint \n",
         "\n",
-        "val changeDataSource = Seq(\n",
-        "  ChangeData(\"d\", \"82\", deleted = false, time = 6),\n",
-        "  ChangeData(\"e\", \"19\", deleted = false, time = 7),\n",
-        "  ChangeData(\"f\", \"12\", deleted = false, time = 8),\n",
-        "  ChangeData(\"g\", null, deleted = true, time = 9),\n",
-        "  ChangeData(\"d\", \"21\", deleted = false, time = 10)\n",
-        ").toDF().createOrReplaceTempView(\"changes\")"
+        "// val changeDataSource = Seq(\n",
+        "//   ChangeData(\"d\", \"82\", deleted = false, time = 6),\n",
+        "//   ChangeData(\"e\", \"19\", deleted = false, time = 7),\n",
+        "//   ChangeData(\"f\", \"12\", deleted = false, time = 8),\n",
+        "//   ChangeData(\"g\", null, deleted = true, time = 9),\n",
+        "//   ChangeData(\"d\", \"21\", deleted = false, time = 10)\n",
+        "// ).toDF().createOrReplaceTempView(\"changes\")"
       ]
     },
     {
@@ -74,26 +88,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "outputs": [],
-      "metadata": {
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "collapsed": true
-      },
-      "source": [
-        "val latestChangeForEachKey = changesDF.selectExpr(\"key\", \"struct(time, newValue, deleted) as otherCols\").groupBy(\"key\").agg(max(\"otherCols\").as(\"latest\")).selectExpr(\"key\", \"latest.*\")"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 5,
       "outputs": [],
       "metadata": {
@@ -109,7 +103,8 @@
         "collapsed": true
       },
       "source": [
-        "latestChangeForEachKey.createOrReplaceTempView(\"lastchanges\")"
+        "val latestChangeForEachKey = changesDF.selectExpr(\"key\", \"struct(time, newValue, deleted) as otherCols\").groupBy(\"key\").agg(max(\"otherCols\").as(\"latest\")).selectExpr(\"key\", \"latest.*\")\r\n",
+        "latestChangeForEachKey.show()"
       ]
     },
     {
@@ -129,18 +124,28 @@
         "collapsed": true
       },
       "source": [
-        "latestChangeForEachKey.write.format(\"parqut\").mode(\"overwrite\").saveAsTable(\"lastchanges\") "
+        "latestChangeForEachKey.createOrReplaceTempView(\"lastchanges\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "outputs": [],
+      "metadata": {
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "collapsed": true
+      },
+      "source": [
+        "latestChangeForEachKey.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"lastchanges\") "
       ]
     }
-  ],
-  "metadata": {
-    "save_output": true,
-    "kernelspec": {
-      "name": "synapse_spark",
-      "display_name": "Synapse Spark"
-    },
-    "language_info": {
-      "name": "scala"
-    }
-  }
+  ]
 }
